# grpc-cpp-docker

./: CMakeLists.txt  Dockerfile  README.md  dispersion.proto  dispersion1.txt  dispersion2.txt  dispersion3.txt  dispersion4.txt  dispersion_calculation.cc  dispersion_calculation.h  dispersion_client.h  dispersion_local.cc  dispersion_node.cc  dispersion_results.h  dispersion_service.h  dispersion_types.h  run.sh
